Fix a11y: color contrast of secondary texts
gray (#808080) on white (#fff) is considered low-contrasted (3.94:1),
which makes it difficult or impossible for many users to read.

https://dequeuniversity.com/rules/axe/4.10/color-contrast
https://www.w3.org/WAI/WCAG21/Understanding/contrast-minimum.html

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -56,7 +56,6 @@ header a.title {
 	font-weight: bold;
 }
 header nav {
-	color: gray;
 	font-size: .9em;
 }
 header .nav {
@@ -79,7 +78,6 @@ main {
 * ---------------------------------- */
 
 footer {
-	color: gray;
 	font-size: .9em;
 	display: flex;
 	flex-direction: row;
@@ -121,6 +119,5 @@ ol.nav li {
 	list-style: nav-entry;
 }
 ol.nav li::marker {
-	color: gray;
 	font-family: monospace;
 }
